Fix overflow issues

--- a/randomQuote/src/assets/style/sass/partials/_content.sass
+++ b/randomQuote/src/assets/style/sass/partials/_content.sass
@@ -5,6 +5,7 @@
   align-items: center
   padding: 10vh 0
   background: $mainBg
+  height: 90%
   .title
     color: $whiteText
     font-size: $title
