--- a/randomQuote/src/assets/style/sass/tools/_variables.sass
+++ b/randomQuote/src/assets/style/sass/tools/_variables.sass
@@ -1,6 +1,6 @@
 // Typography
 $typeface: 'Noto Serif', serif
-$title: 10vh
+$title: 7vh
 $quote: 5vh
 $author: 4vh
 $footerText: 3vh
